--- a/index.html
+++ b/index.html
@@ -1,65 +1,75 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>RAMADEVI PICKLES</title>
-    <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>RAMADEVI PICKLES</title>
+  <link rel="stylesheet" href="style.css"/>
+  <link href="https://fonts.googleapis.com/css2?family=Kaisei+Decol&family=Nunito&display=swap" rel="stylesheet"/>
 </head>
 <body>
-    <header>
-        <h1>RAMADEVI PICKLES</h1>
-        <p>Authentic Homemade Taste</p>
-    </header>
+  <header>
+    <h1>🪔 RAMADEVI PICKLES</h1>
+    <p>Homemade | Organic | Grandma's Recipe</p>
+  </header>
 
-    <section class="pickles">
-        <h2>Our Pickles</h2>
-        <div class="pickle-list">
-            <div class="pickle">
-                <img src="https://via.placeholder.com/150" alt="Mango Pickle">
-                <h3>Mango Pickle</h3>
-                <p>Classic tangy and spicy mango pickle.</p>
-            </div>
-            <div class="pickle">
-                <img src="https://via.placeholder.com/150" alt="Lemon Pickle">
-                <h3>Lemon Pickle</h3>
-                <p>Zesty and flavorful lemon delight.</p>
-            </div>
-            <div class="pickle">
-                <img src="https://via.placeholder.com/150" alt="Gongura Pickle">
-                <h3>Gongura Pickle</h3>
-                <p>Traditional Andhra-style gongura pickle.</p>
-            </div>
-            <div class="pickle">
-                <img src="https://via.placeholder.com/150" alt="Imli Pickle">
-                <h3>Imli Pickle</h3>
-                <p>Sour tamarind pickle with rich flavor.</p>
-            </div>
-            <div class="pickle">
-                <img src="https://via.placeholder.com/150" alt="Gooseberry Pickle">
-                <h3>Gooseberry Pickle</h3>
-                <p>Healthy and spicy gooseberry blend.</p>
-            </div>
-            <div class="pickle">
-                <img src="https://via.placeholder.com/150" alt="Red Chilli Pickle">
-                <h3>Red Chilli Pickle</h3>
-                <p>Fiery red chilli pickle for spice lovers.</p>
-            </div>
-            <div class="pickle">
-                <img src="https://via.placeholder.com/150" alt="Bitter Gourd Pickle">
-                <h3>Bitter Gourd Pickle</h3>
-                <p>Unique and flavorful bitter gourd pickle.</p>
-            </div>
-        </div>
-    </section>
+  <section class="about">
+    <h2>Why Choose Us?</h2>
+    <p>
+      Our pickles are <strong>100% homemade</strong> using <strong>organic ingredients</strong> and 
+      <strong>no preservatives</strong>. Inspired by traditional methods used by our grandmothers,
+      each pickle is slow-crafted with love, patience, and authenticity — just like the olden days.
+    </p>
+  </section>
 
-    <section class="contact">
-        <h2>Contact Us</h2>
-        <p><strong>Phone:</strong> <a href="tel:8806890021">8806890021</a></p>
-    </section>
+  <section class="pickles">
+    <h2>Our Special Pickles</h2>
+    <div class="pickle-list">
+      <div class="pickle">
+        <img src="https://via.placeholder.com/150" alt="Mango Pickle">
+        <h3>Mango</h3>
+        <p>Spicy and tangy, made from raw mangoes & mustard oil.</p>
+      </div>
+      <div class="pickle">
+        <img src="https://via.placeholder.com/150" alt="Lemon Pickle">
+        <h3>Lemon</h3>
+        <p>Zesty lemons aged with salt and Indian spices.</p>
+      </div>
+      <div class="pickle">
+        <img src="https://via.placeholder.com/150" alt="Gongura Pickle">
+        <h3>Gongura</h3>
+        <p>A classic South Indian favorite with tangy sorrel leaves.</p>
+      </div>
+      <div class="pickle">
+        <img src="https://via.placeholder.com/150" alt="Imli Pickle">
+        <h3>Imli</h3>
+        <p>Sour tamarind mixed with jaggery and red chilli.</p>
+      </div>
+      <div class="pickle">
+        <img src="https://via.placeholder.com/150" alt="Gooseberry Pickle">
+        <h3>Gooseberry</h3>
+        <p>Rich in Vitamin C and packed with bold flavor.</p>
+      </div>
+      <div class="pickle">
+        <img src="https://via.placeholder.com/150" alt="Red Chilli Pickle">
+        <h3>Red Chilli</h3>
+        <p>For spice lovers — fiery, bold, and unforgettable.</p>
+      </div>
+      <div class="pickle">
+        <img src="https://via.placeholder.com/150" alt="Bitter Gourd Pickle">
+        <h3>Bitter Gourd</h3>
+        <p>Uniquely bitter-sweet, a nostalgic classic in many homes.</p>
+      </div>
+    </div>
+  </section>
 
-    <footer>
-        <p>&copy; 2025 RAMADEVI PICKLES. All rights reserved.</p>
-    </footer>
+  <section class="contact">
+    <h2>📞 Contact Us</h2>
+    <p><strong>Phone:</strong> <a href="tel:8806890021">8806890021</a></p>
+  </section>
+
+  <footer>
+    <p>&copy; 2025 RAMADEVI PICKLES. Made with ❤️ in India.</p>
+  </footer>
 </body>
 </html>
