--- a/index.html
+++ b/index.html
@@ -99,6 +99,12 @@
       </p>
     </section>
 
+        <section class="text-center">
+      <h2 class="text-3xl text-red-900 mb-6 border-b-2 border-red-700 inline-block px-4">OUR SHOP</h2>
+      <p class="text-yellow-900 text-xl">
+        ADRESS: <a href="ADDRESS:BT KAWADE ROAD,NIGADE NAGAR LANE 2,PUNE 411001 ," class="text-red-700 font-bold hover:underline">BT KAWADE ROAD,NIGADE NAGAR LANE 2,PUNE 411001</a>
+      </p>
+    </section>
   </main>
 
   <!-- Footer -->
