--- a/index.html
+++ b/index.html
@@ -48,43 +48,43 @@
         
         <!-- Pickle Item -->
         <div class="bg-yellow-50 border-2 border-yellow-400 rounded-xl p-6 shadow-md hover:shadow-xl transform hover:scale-105 transition duration-300 text-center">
-          <img src="mango-pickle.jpg" alt="Mango Pickle" class="mx-auto h-40 object-contain rounded-lg mb-4" />
+          <img src="https://ibb.co/ZpRRd4cw" alt="Mango Pickle" class="mx-auto h-40 object-contain rounded-lg mb-4" />
           <h3 class="text-xl text-red-700 font-semibold mb-2">Mango Pickle</h3>
           <p class="text-yellow-900">Spicy and tangy, made from raw mangoes & mustard oil.</p>
         </div>
 
         <div class="bg-yellow-50 border-2 border-yellow-400 rounded-xl p-6 shadow-md hover:shadow-xl transform hover:scale-105 transition duration-300 text-center">
-          <img src="lemon-pickle.jpg" alt="Lemon Pickle" class="mx-auto h-40 object-contain rounded-lg mb-4" />
+          <img src="https://ibb.co/x81Fy08p" alt="Lemon Pickle" class="mx-auto h-40 object-contain rounded-lg mb-4" />
           <h3 class="text-xl text-red-700 font-semibold mb-2">Lemon Pickle</h3>
           <p class="text-yellow-900">Zesty lemons aged with salt and Indian spices.</p>
         </div>
 
         <div class="bg-yellow-50 border-2 border-yellow-400 rounded-xl p-6 shadow-md hover:shadow-xl transform hover:scale-105 transition duration-300 text-center">
-          <img src="imli-pickle.jpg" alt="Imli Pickle" class="mx-auto h-40 object-contain rounded-lg mb-4" />
+          <img src="https://ibb.co/7xztCMSZ" alt="Imli Pickle" class="mx-auto h-40 object-contain rounded-lg mb-4" />
           <h3 class="text-xl text-red-700 font-semibold mb-2">Imli (Tamarind) Pickle</h3>
           <p class="text-yellow-900">Sour tamarind mixed with jaggery and red chilli.</p>
         </div>
 
         <div class="bg-yellow-50 border-2 border-yellow-400 rounded-xl p-6 shadow-md hover:shadow-xl transform hover:scale-105 transition duration-300 text-center">
-          <img src="gongura-pickle.jpg" alt="Gongura Pickle" class="mx-auto h-40 object-contain rounded-lg mb-4" />
+          <img src="https://ibb.co/8Lkn86RG" alt="Gongura Pickle" class="mx-auto h-40 object-contain rounded-lg mb-4" />
           <h3 class="text-xl text-red-700 font-semibold mb-2">Gongura Pickle</h3>
           <p class="text-yellow-900">A classic South Indian favorite with tangy sorrel leaves.</p>
         </div>
 
         <div class="bg-yellow-50 border-2 border-yellow-400 rounded-xl p-6 shadow-md hover:shadow-xl transform hover:scale-105 transition duration-300 text-center">
-          <img src="chilli-pickle.jpg" alt="Red Chilli Pickle" class="mx-auto h-40 object-contain rounded-lg mb-4" />
+          <img src="https://ibb.co/W4fFCp65" alt="Red Chilli Pickle" class="mx-auto h-40 object-contain rounded-lg mb-4" />
           <h3 class="text-xl text-red-700 font-semibold mb-2">Red Chilli Pickle</h3>
           <p class="text-yellow-900">Fiery, bold, and unforgettable.</p>
         </div>
 
         <div class="bg-yellow-50 border-2 border-yellow-400 rounded-xl p-6 shadow-md hover:shadow-xl transform hover:scale-105 transition duration-300 text-center">
-          <img src="gooseberry-pickle.jpg" alt="Gooseberry Pickle" class="mx-auto h-40 object-contain rounded-lg mb-4" />
+          <img src="https://ibb.co/kVSZrcwB" alt="Gooseberry Pickle" class="mx-auto h-40 object-contain rounded-lg mb-4" />
           <h3 class="text-xl text-red-700 font-semibold mb-2">Gooseberry Pickle</h3>
           <p class="text-yellow-900">Rich in Vitamin C and packed with bold flavor.</p>
         </div>
 
         <div class="bg-yellow-50 border-2 border-yellow-400 rounded-xl p-6 shadow-md hover:shadow-xl transform hover:scale-105 transition duration-300 text-center">
-          <img src="bitter-gourd-pickle.jpg" alt="Bitter Gourd Pickle" class="mx-auto h-40 object-contain rounded-lg mb-4" />
+          <img src="https://ibb.co/8nRB4WgD" alt="Bitter Gourd Pickle" class="mx-auto h-40 object-contain rounded-lg mb-4" />
           <h3 class="text-xl text-red-700 font-semibold mb-2">Bitter Gourd Pickle</h3>
           <p class="text-yellow-900">Uniquely bitter-sweet, a nostalgic classic in many homes.</p>
         </div>
@@ -102,7 +102,7 @@
         <section class="text-center">
       <h2 class="text-3xl text-red-900 mb-6 border-b-2 border-red-700 inline-block px-4">OUR SHOP</h2>
       <p class="text-yellow-900 text-xl">
-        ADRESS: <a href="ADDRESS:BT KAWADE ROAD,NIGADE NAGAR LANE 2,PUNE 411001 ," class="text-red-700 font-bold hover:underline">BT KAWADE ROAD,NIGADE NAGAR LANE 2,PUNE 411001</a>
+        ADDRESS: <a href="ADDRESS:BT KAWADE ROAD,NIGADE NAGAR LANE 2,PUNE 411001 ," class="text-red-700 font-bold hover:underline">BT KAWADE ROAD,NIGADE NAGAR LANE 2,PUNE 411001</a>
       </p>
     </section>
   </main>
