--- a/index.html
+++ b/index.html
@@ -48,43 +48,43 @@
         
         <!-- Pickle Item -->
         <div class="bg-yellow-50 border-2 border-yellow-400 rounded-xl p-6 shadow-md hover:shadow-xl transform hover:scale-105 transition duration-300 text-center">
-          <img src="https://ibb.co/ZpRRd4cw" alt="Mango Pickle" class="mx-auto h-40 object-contain rounded-lg mb-4" />
+          <img src="https://ibb.co/ZpRRd4cw.png" alt="Mango Pickle" class="mx-auto h-40 object-contain rounded-lg mb-4" />
           <h3 class="text-xl text-red-700 font-semibold mb-2">Mango Pickle</h3>
           <p class="text-yellow-900">Spicy and tangy, made from raw mangoes & mustard oil.</p>
         </div>
 
         <div class="bg-yellow-50 border-2 border-yellow-400 rounded-xl p-6 shadow-md hover:shadow-xl transform hover:scale-105 transition duration-300 text-center">
-          <img src="https://ibb.co/x81Fy08p" alt="Lemon Pickle" class="mx-auto h-40 object-contain rounded-lg mb-4" />
+          <img src="https://ibb.co/x81Fy08p.png" alt="Lemon Pickle" class="mx-auto h-40 object-contain rounded-lg mb-4" />
           <h3 class="text-xl text-red-700 font-semibold mb-2">Lemon Pickle</h3>
           <p class="text-yellow-900">Zesty lemons aged with salt and Indian spices.</p>
         </div>
 
         <div class="bg-yellow-50 border-2 border-yellow-400 rounded-xl p-6 shadow-md hover:shadow-xl transform hover:scale-105 transition duration-300 text-center">
-          <img src="https://ibb.co/7xztCMSZ" alt="Imli Pickle" class="mx-auto h-40 object-contain rounded-lg mb-4" />
+          <img src="https://ibb.co/7xztCMSZ.png" alt="Imli Pickle" class="mx-auto h-40 object-contain rounded-lg mb-4" />
           <h3 class="text-xl text-red-700 font-semibold mb-2">Imli (Tamarind) Pickle</h3>
           <p class="text-yellow-900">Sour tamarind mixed with jaggery and red chilli.</p>
         </div>
 
         <div class="bg-yellow-50 border-2 border-yellow-400 rounded-xl p-6 shadow-md hover:shadow-xl transform hover:scale-105 transition duration-300 text-center">
-          <img src="https://ibb.co/8Lkn86RG" alt="Gongura Pickle" class="mx-auto h-40 object-contain rounded-lg mb-4" />
+          <img src="https://ibb.co/8Lkn86RG.png" alt="Gongura Pickle" class="mx-auto h-40 object-contain rounded-lg mb-4" />
           <h3 class="text-xl text-red-700 font-semibold mb-2">Gongura Pickle</h3>
           <p class="text-yellow-900">A classic South Indian favorite with tangy sorrel leaves.</p>
         </div>
 
         <div class="bg-yellow-50 border-2 border-yellow-400 rounded-xl p-6 shadow-md hover:shadow-xl transform hover:scale-105 transition duration-300 text-center">
-          <img src="https://ibb.co/W4fFCp65" alt="Red Chilli Pickle" class="mx-auto h-40 object-contain rounded-lg mb-4" />
+          <img src="https://ibb.co/W4fFCp65.png" alt="Red Chilli Pickle" class="mx-auto h-40 object-contain rounded-lg mb-4" />
           <h3 class="text-xl text-red-700 font-semibold mb-2">Red Chilli Pickle</h3>
           <p class="text-yellow-900">Fiery, bold, and unforgettable.</p>
         </div>
 
         <div class="bg-yellow-50 border-2 border-yellow-400 rounded-xl p-6 shadow-md hover:shadow-xl transform hover:scale-105 transition duration-300 text-center">
-          <img src="https://ibb.co/kVSZrcwB" alt="Gooseberry Pickle" class="mx-auto h-40 object-contain rounded-lg mb-4" />
+          <img src="https://ibb.co/kVSZrcwB.png" alt="Gooseberry Pickle" class="mx-auto h-40 object-contain rounded-lg mb-4" />
           <h3 class="text-xl text-red-700 font-semibold mb-2">Gooseberry Pickle</h3>
           <p class="text-yellow-900">Rich in Vitamin C and packed with bold flavor.</p>
         </div>
 
         <div class="bg-yellow-50 border-2 border-yellow-400 rounded-xl p-6 shadow-md hover:shadow-xl transform hover:scale-105 transition duration-300 text-center">
-          <img src="https://ibb.co/8nRB4WgD" alt="Bitter Gourd Pickle" class="mx-auto h-40 object-contain rounded-lg mb-4" />
+          <img src="https://ibb.co/8nRB4WgD.png" alt="Bitter Gourd Pickle" class="mx-auto h-40 object-contain rounded-lg mb-4" />
           <h3 class="text-xl text-red-700 font-semibold mb-2">Bitter Gourd Pickle</h3>
           <p class="text-yellow-900">Uniquely bitter-sweet, a nostalgic classic in many homes.</p>
         </div>
