--- a/index.html
+++ b/index.html
@@ -48,43 +48,43 @@
         
         <!-- Pickle Item -->
         <div class="bg-yellow-50 border-2 border-yellow-400 rounded-xl p-6 shadow-md hover:shadow-xl transform hover:scale-105 transition duration-300 text-center">
-          <img src="https://i.ibb.co/ZpRRd4c/mango-pickle.png" alt="Mango Pickle" class="mx-auto h-40 object-contain rounded-lg mb-4" />
+          <img src="https://i.ibb.co/ncgWq3t/Mango.jpg" alt="Mango Pickle" class="mx-auto h-40 object-contain rounded-lg mb-4" />
           <h3 class="text-xl text-red-700 font-semibold mb-2">Mango Pickle</h3>
           <p class="text-yellow-900">Spicy and tangy, made from raw mangoes & mustard oil.</p>
         </div>
 
         <div class="bg-yellow-50 border-2 border-yellow-400 rounded-xl p-6 shadow-md hover:shadow-xl transform hover:scale-105 transition duration-300 text-center">
-          <img src="https://i.ibb.co/x81Fy08/lemon-pickle.png" alt="Lemon Pickle" class="mx-auto h-40 object-contain rounded-lg mb-4" />
+          <img src="https://i.ibb.co/zVZ4tqb/Lemon.jpg" alt="Lemon Pickle" class="mx-auto h-40 object-contain rounded-lg mb-4" />
           <h3 class="text-xl text-red-700 font-semibold mb-2">Lemon Pickle</h3>
           <p class="text-yellow-900">Zesty lemons aged with salt and Indian spices.</p>
         </div>
 
         <div class="bg-yellow-50 border-2 border-yellow-400 rounded-xl p-6 shadow-md hover:shadow-xl transform hover:scale-105 transition duration-300 text-center">
-          <img src="https://i.ibb.co/7xztCMS/imli-pickle.png" alt="Imli Pickle" class="mx-auto h-40 object-contain rounded-lg mb-4" />
+          <img src="https://i.ibb.co/7pYx0vV/Imli.jpg" alt="Imli Pickle" class="mx-auto h-40 object-contain rounded-lg mb-4" />
           <h3 class="text-xl text-red-700 font-semibold mb-2">Imli (Tamarind) Pickle</h3>
           <p class="text-yellow-900">Sour tamarind mixed with jaggery and red chilli.</p>
         </div>
 
         <div class="bg-yellow-50 border-2 border-yellow-400 rounded-xl p-6 shadow-md hover:shadow-xl transform hover:scale-105 transition duration-300 text-center">
-          <img src="https://i.ibb.co/8Lkn86R/gongura-pickle.png" alt="Gongura Pickle" class="mx-auto h-40 object-contain rounded-lg mb-4" />
+          <img src="https://i.ibb.co/ZYW3wtV/Gongura.jpg" alt="Gongura Pickle" class="mx-auto h-40 object-contain rounded-lg mb-4" />
           <h3 class="text-xl text-red-700 font-semibold mb-2">Gongura Pickle</h3>
           <p class="text-yellow-900">A classic South Indian favorite with tangy sorrel leaves.</p>
         </div>
 
         <div class="bg-yellow-50 border-2 border-yellow-400 rounded-xl p-6 shadow-md hover:shadow-xl transform hover:scale-105 transition duration-300 text-center">
-          <img src="https://i.ibb.co/W4fFCp6/red-chilli-pickle.png" alt="Red Chilli Pickle" class="mx-auto h-40 object-contain rounded-lg mb-4" />
+          <img src="https://i.ibb.co/1Kx7s4h/Red-Chilli.jpg" alt="Red Chilli Pickle" class="mx-auto h-40 object-contain rounded-lg mb-4" />
           <h3 class="text-xl text-red-700 font-semibold mb-2">Red Chilli Pickle</h3>
           <p class="text-yellow-900">Fiery, bold, and unforgettable.</p>
         </div>
 
         <div class="bg-yellow-50 border-2 border-yellow-400 rounded-xl p-6 shadow-md hover:shadow-xl transform hover:scale-105 transition duration-300 text-center">
-          <img src="https://i.ibb.co/kVSZrcw/gooseberry-pickle.png" alt="Gooseberry Pickle" class="mx-auto h-40 object-contain rounded-lg mb-4" />
+          <img src="https://i.ibb.co/b5PsfmB/Gooseberry.jpg" alt="Gooseberry Pickle" class="mx-auto h-40 object-contain rounded-lg mb-4" />
           <h3 class="text-xl text-red-700 font-semibold mb-2">Gooseberry Pickle</h3>
           <p class="text-yellow-900">Rich in Vitamin C and packed with bold flavor.</p>
         </div>
 
         <div class="bg-yellow-50 border-2 border-yellow-400 rounded-xl p-6 shadow-md hover:shadow-xl transform hover:scale-105 transition duration-300 text-center">
-          <img src="https://i.ibb.co/8nRB4Wg/bitter-gourd-pickle.png" alt="Bitter Gourd Pickle" class="mx-auto h-40 object-contain rounded-lg mb-4" />
+          <img src="https://i.ibb.co/8m95h1b/Bitter-Gourd.jpg" alt="Bitter Gourd Pickle" class="mx-auto h-40 object-contain rounded-lg mb-4" />
           <h3 class="text-xl text-red-700 font-semibold mb-2">Bitter Gourd Pickle</h3>
           <p class="text-yellow-900">Uniquely bitter-sweet, a nostalgic classic in many homes.</p>
         </div>
