--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
         </div>
 
         <div class="bg-yellow-50 border-2 border-yellow-400 rounded-xl p-6 shadow-md hover:shadow-xl transform hover:scale-105 transition duration-300 text-center">
-          <img src="https://i.ibb.co/b5PsfmB/Gooseberry.png" alt="Gooseberry Pickle" class="mx-auto h-40 object-contain rounded-lg mb-4" />
+          <img src="https://i.ibb.co/bgQTskt4/Chat-GPT-Image-Aug-7-2025-08-29-27-PM.png" alt="Gooseberry Pickle" class="mx-auto h-40 object-contain rounded-lg mb-4" />
           <h3 class="text-xl text-red-700 font-semibold mb-2">Gooseberry Pickle</h3>
           <p class="text-yellow-900">Rich in Vitamin C and packed with bold flavor.</p>
         </div>
