--- a/index.html
+++ b/index.html
@@ -48,31 +48,31 @@
         
         <!-- Pickle Item -->
         <div class="bg-yellow-50 border-2 border-yellow-400 rounded-xl p-6 shadow-md hover:shadow-xl transform hover:scale-105 transition duration-300 text-center">
-          <img src="https://i.ibb.co/ncgWq3t/Mango.png" alt="Mango Pickle" class="mx-auto h-40 object-contain rounded-lg mb-4" />
+          <img src="https://i.ibb.co/mCDHphMN/Chat-GPT-Image-Aug-7-2025-08-33-00-PM.png" alt="Mango Pickle" class="mx-auto h-40 object-contain rounded-lg mb-4" />
           <h3 class="text-xl text-red-700 font-semibold mb-2">Mango Pickle</h3>
           <p class="text-yellow-900">Spicy and tangy, made from raw mangoes & mustard oil.</p>
         </div>
 
         <div class="bg-yellow-50 border-2 border-yellow-400 rounded-xl p-6 shadow-md hover:shadow-xl transform hover:scale-105 transition duration-300 text-center">
-          <img src="https://i.ibb.co/zVZ4tqb/Lemon.png" alt="Lemon Pickle" class="mx-auto h-40 object-contain rounded-lg mb-4" />
+          <img src="https://i.ibb.co/Fbj15WVw/Chat-GPT-Image-Aug-7-2025-07-55-41-PM.png" alt="Lemon Pickle" class="mx-auto h-40 object-contain rounded-lg mb-4" />
           <h3 class="text-xl text-red-700 font-semibold mb-2">Lemon Pickle</h3>
           <p class="text-yellow-900">Zesty lemons aged with salt and Indian spices.</p>
         </div>
 
         <div class="bg-yellow-50 border-2 border-yellow-400 rounded-xl p-6 shadow-md hover:shadow-xl transform hover:scale-105 transition duration-300 text-center">
-          <img src="https://i.ibb.co/7pYx0vV/Imli.png" alt="Imli Pickle" class="mx-auto h-40 object-contain rounded-lg mb-4" />
+          <img src="https://i.ibb.co/R42PQnkx/Chat-GPT-Image-Aug-7-2025-08-30-12-PM.png" alt="Imli Pickle" class="mx-auto h-40 object-contain rounded-lg mb-4" />
           <h3 class="text-xl text-red-700 font-semibold mb-2">Imli (Tamarind) Pickle</h3>
           <p class="text-yellow-900">Sour tamarind mixed with jaggery and red chilli.</p>
         </div>
 
         <div class="bg-yellow-50 border-2 border-yellow-400 rounded-xl p-6 shadow-md hover:shadow-xl transform hover:scale-105 transition duration-300 text-center">
-          <img src="https://i.ibb.co/ZYW3wtV/Gongura.png" alt="Gongura Pickle" class="mx-auto h-40 object-contain rounded-lg mb-4" />
+          <img src="https://i.ibb.co/jvZpbn6q/Chat-GPT-Image-Aug-7-2025-08-31-00-PM.png" alt="Gongura Pickle" class="mx-auto h-40 object-contain rounded-lg mb-4" />
           <h3 class="text-xl text-red-700 font-semibold mb-2">Gongura Pickle</h3>
           <p class="text-yellow-900">A classic South Indian favorite with tangy sorrel leaves.</p>
         </div>
 
         <div class="bg-yellow-50 border-2 border-yellow-400 rounded-xl p-6 shadow-md hover:shadow-xl transform hover:scale-105 transition duration-300 text-center">
-          <img src="https://i.ibb.co/1Kx7s4h/Red-Chilli.png" alt="Red Chilli Pickle" class="mx-auto h-40 object-contain rounded-lg mb-4" />
+          <img src="https://i.ibb.co/7tQYYLS1/Chat-GPT-Image-Aug-7-2025-08-27-40-PM.png" alt="Red Chilli Pickle" class="mx-auto h-40 object-contain rounded-lg mb-4" />
           <h3 class="text-xl text-red-700 font-semibold mb-2">Red Chilli Pickle</h3>
           <p class="text-yellow-900">Fiery, bold, and unforgettable.</p>
         </div>
@@ -84,7 +84,7 @@
         </div>
 
         <div class="bg-yellow-50 border-2 border-yellow-400 rounded-xl p-6 shadow-md hover:shadow-xl transform hover:scale-105 transition duration-300 text-center">
-          <img src="https://i.ibb.co/8m95h1b/Bitter-Gourd.png" alt="Bitter Gourd Pickle" class="mx-auto h-40 object-contain rounded-lg mb-4" />
+          <img src="https://i.ibb.co/C5M6hnKT/Chat-GPT-Image-Aug-7-2025-08-26-36-PM.png" alt="Bitter Gourd Pickle" class="mx-auto h-40 object-contain rounded-lg mb-4" />
           <h3 class="text-xl text-red-700 font-semibold mb-2">Bitter Gourd Pickle</h3>
           <p class="text-yellow-900">Uniquely bitter-sweet, a nostalgic classic in many homes.</p>
         </div>
