--- a/index.html
+++ b/index.html
@@ -88,6 +88,12 @@
           <h3 class="text-xl text-red-700 font-semibold mb-2">Bitter Gourd Pickle</h3>
           <p class="text-yellow-900">Uniquely bitter-sweet, a nostalgic classic in many homes.(₹120)</p>
         </div>
+
+         <div class="bg-yellow-50 border-2 border-yellow-400 rounded-xl p-6 shadow-md hover:shadow-xl transform hover:scale-105 transition duration-300 text-center">
+          <img src="https://i.ibb.co/93fpbTTw/Gemini-Generated-Image-i3r6tvi3r6tvi3r6.png" alt="Pootharekulu" class="mx-auto h-40 object-contain rounded-lg mb-4" />
+          <h3 class="text-xl text-red-700 font-semibold mb-2">Bitter Gourd Pickle</h3>
+          <p class="text-yellow-900">Pootharekulu,is a famous traditional sweet from Andhra Pradesh. Made with ultra-thin rice starch sheets, ghee, and fillings like jaggery or sugar, it melts in the mouth while giving a rich, authentic taste. Delicate yet flavorful, it is a festive favorite loved across generations..(₹120)</p>
+        </div>
       </div>
     </section>
 
