--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
         <div class="bg-yellow-50 border-2 border-yellow-400 rounded-xl p-6 shadow-md hover:shadow-xl transform hover:scale-105 transition duration-300 text-center">
           <img src="https://i.ibb.co/C5M6hnKT/Chat-GPT-Image-Aug-7-2025-08-26-36-PM.png" alt="Bitter Gourd Pickle" class="mx-auto h-40 object-contain rounded-lg mb-4" />
           <h3 class="text-xl text-red-700 font-semibold mb-2">Bitter Gourd Pickle</h3>
-          <p class="text-yellow-900">Uniquely bitter-sweet, a nostalgic classic in many homes.(₹120)</p>
+          <p class="text-yellow-900">Uniquely spiced, a nostalgic classic in many homes.(₹120)</p>
         </div>
 
          <div class="bg-yellow-50 border-2 border-yellow-400 rounded-xl p-6 shadow-md hover:shadow-xl transform hover:scale-105 transition duration-300 text-center">
